--- a/public/src/html/login.html
+++ b/public/src/html/login.html
@@ -69,11 +69,11 @@
                     <div class="required-inputs">
                         <div>
                             <label for="pw">Password *</label>
-                            <input type="text" id="pw" required>
+                            <input type="password" id="pw" required>
                         </div>
                         <div>
                             <label for="verify-pw">Verify password *</label>
-                            <input type="text" id="verify-pw" required>
+                            <input type="password" id="verify-pw" required>
                         </div>
                     </div>
                     <div class="required-inputs">
