checks for password length to be min6

--- a/public/src/html/login.html
+++ b/public/src/html/login.html
@@ -69,7 +69,7 @@
                     <div class="required-inputs">
                         <div>
                             <label for="pw">Password *</label>
-                            <input type="password" id="pw" required>
+                            <input type="password" id="pw" minlength="6" maxlength="30" required>
                         </div>
                         <div>
                             <label for="verify-pw">Verify password *</label>
