added header documentation

--- a/public/src/html/account.html
+++ b/public/src/html/account.html
@@ -1,5 +1,8 @@
 <!-- 
-
+    Derrek
+    Account.html
+    This page will contain data and display user data. Only accesible when logged in and will
+    redirect users to the login/registration page if not currently signed in.
 -->
 <!DOCTYPE html>
 <html lang="en">
