--- a/public/src/html/login.html
+++ b/public/src/html/login.html
@@ -1,5 +1,10 @@
 <!--
-
+    Derrek
+    login.html
+    The login/registration page that users will have access to when not logged in.
+    All inputs when attempting to login or register, will provide prompts if they are 
+    invalid or cannot be processed
+    The login is a popup on the page that only appears when clicking login from the nav bar.
 -->
 <!DOCTYPE html>
 <html lang="en">
