updated nav links

--- a/public/src/html/account.html
+++ b/public/src/html/account.html
@@ -27,10 +27,10 @@
                 </nav>
                 <nav id="nav2">
                     <ul>
-                        <li><a href="src/html/amenities.html">Play</a></li>
-                        <li><a href="src/html/dinning.html">Dine</a></li>
-                        <li><a href="src/html/rooms.html">Stay</a></li>
-                        <li><a id="curr-page" href="index.html">Home</a></li>
+                        <li><a href="amenities.html">Play</a></li>
+                        <li><a href="dinning.html">Dine</a></li>
+                        <li><a href="rooms.html">Stay</a></li>
+                        <li><a id="curr-page" href="../../index.html">Home</a></li>
                     </ul>
                 </nav>
             </section>
