--- a/public/src/html/login.html
+++ b/public/src/html/login.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header>
-            <a id="logo-box" href="index.html">
+            <a id="logo-box" href="../../index.html">
                 <img id="logo" src="../../assets/img/overlook-logo.png" alt="overlook-logo">
                 <p>Overlook Hotel</p>
             </a>
@@ -31,10 +31,10 @@
                 </nav>
                 <nav id="nav2">
                     <ul>
-                        <li><a href="src/html/amenities.html">Play</a></li>
-                        <li><a href="src/html/dinning.html">Dine</a></li>
-                        <li><a href="src/html/rooms.html">Stay</a></li>
-                        <li><a id="curr-page" href="index.html">Home</a></li>
+                        <li><a href="amenities.html">Play</a></li>
+                        <li><a href="dinning.html">Dine</a></li>
+                        <li><a href="rooms.html">Stay</a></li>
+                        <li><a id="curr-page" href="../../index.html">Home</a></li>
                     </ul>
                 </nav>
             </section>
