--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@ This is the landing page for the Overlook Hotel reservation website.
             <section id="navigation">
                 <nav id="nav1">
                     <ul id="login">
-                        <li><a id="link1" href="">Login</a></li>
+                        <li><a id="link1" href="src/html/login.html">Login</a></li>
                         <li><a id="nullLink" href="">|</a></li>
-                        <li><a id="link2" href="">Join</a></li>
+                        <li><a id="link2" href="src/html/login.html">Join</a></li>
                     </ul>
                     <ul id="account" class="hidden">
                         <li><a href="src/html/account.html">My Account</a></li>
