--- a/public/src/html/rooms.html
+++ b/public/src/html/rooms.html
@@ -21,9 +21,9 @@ This page is about the rooms the hotel offers.
             <section id="navigation">
                 <nav id="nav1">
                     <ul id="login">
-                        <li><a id="link1" href="">Login</a></li>
+                        <li><a id="link1" href="login.html">Login</a></li>
                         <li><a id="nullLink" href="">|</a></li>
-                        <li><a id="link2" href="">Join</a></li>
+                        <li><a id="link2" href="login.html">Join</a></li>
                     </ul>
                     <ul id="account" class="hidden">
                         <li><a href="account.html">My Account</a></li>
