updated nav links

--- a/public/src/html/account.html
+++ b/public/src/html/account.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header>
-            <a id="logo-box" href="index.html">
+            <a id="logo-box" href="../../index.html">
                 <img id="logo" src="../../assets/img/overlook-logo.png" alt="overlook-logo">
                 <p>Overlook Hotel</p>
             </a>
