fixed an id in the popup

--- a/public/src/html/login.html
+++ b/public/src/html/login.html
@@ -50,7 +50,7 @@
             <form id="register">
                 <div id="register-body">
                     <p>* Indicates Required Field</p>
-                    <p id="register-error"></p>
+                    <h2 id="register-error"></h2>
                     <div class="required-inputs">
                         <div>
                             <label for="first-name">First name *</label>
@@ -125,8 +125,8 @@
                             <input type="password" id="user-pw" required>
                             <button id="sign-in-button">Sign in</button>
                             <div>
-                                <p>Not a member? <a href="login.html">Sign Up</a></p>
-                                <p id="login-error"></p>
+                                <p>Not a member? <a id="sign-in-redirect" href="login.html">Sign Up</a></p>
+                                <h2 id="login-error"></h2>
                             </div>
                         </div>
                     </form>
