change some error handling

--- a/public/src/html/account.html
+++ b/public/src/html/account.html
@@ -45,19 +45,17 @@
                             <p class="phone">+1(123)456-7890</p>
                         </div>
                     </div>
-                    <div id="options">
-                      
+                    <div id="options">   
                         <button class="options" id="profile-btn">Profile</button>
                         <button class="options" id="reservations-btn">Reservations</button>
                         <button class="options" id="sign-out-btn">Sign out</button>
-                        
                     </div>
                 </div>
                 <div id="right">
                     <div id="info-display">
                         <div class="profile-display" id="profile">
                             <div class="display-body">
-                                <h2 class="name">insert-name</h2>
+                                <h2 class="name" id="for-error">insert-name</h2>
                                 <div id="info">
                                     <h3>Basic Info</h3>
                                     <div id="details">
