--- a/public/src/html/login.html
+++ b/public/src/html/login.html
@@ -54,61 +54,61 @@
                     <div class="required-inputs">
                         <div>
                             <label for="first-name">First name *</label>
-                            <input type="text" id="first-name" pattern="[A-za-z]+" required>
+                            <input type="text" class="text-input" id="first-name" pattern="[A-za-z]+" required>
                         </div>
                         <div>
                             <label for="last-name">Last name *</label>
-                            <input type="text" id="last-name" pattern="[A-za-z]+" required>
+                            <input type="text" class="text-input" id="last-name" pattern="[A-za-z]+" required>
                         </div>
                     </div>
                     <div class="required-inputs">
                         <div>
                             <label for="email">Email address *</label>
-                            <input type="text" id="email" required>
+                            <input type="text" class="text-input" id="email" required>
                         </div>
                         <div>
                             <label for="verify-email">Verify email address *</label>
-                            <input type="text" id="verify-email" required>
+                            <input type="text" class="text-input" id="verify-email" required>
                         </div>
                     </div>
                     <div class="required-inputs">
                         <div>
                             <label for="pw">Password *</label>
-                            <input type="password" id="pw" minlength="6" maxlength="30" required>
+                            <input type="password" class="text-input" id="pw" minlength="6" maxlength="30" required>
                         </div>
                         <div>
                             <label for="verify-pw">Verify password *</label>
-                            <input type="password" id="verify-pw" required>
+                            <input type="password" class="text-input" id="verify-pw" required>
                         </div>
                     </div>
                     <div class="required-inputs">
                         <div>
                             <label for="user">Username *</label>
-                            <input type="text" id="user" required>
+                            <input type="text" class="text-input" id="user" required>
                         </div>
                         <div>
                             <label for="phone-num">Mobile number *</label>
-                            <input type="text" id="phone-num" minlength="10" maxlength="10" pattern="[0-9]+" required>
+                            <input type="text" class="text-input" id="phone-num" minlength="10" maxlength="10" pattern="[0-9]+" required>
                         </div>
                     </div>
                     <div class="required-inputs">
                         <div>
                             <label for="state">State *</label>
-                            <input type="text" id="state" pattern="[A-za-z]+" minlength="2" maxlength="2" required>
+                            <input type="text" class="text-input" id="state" pattern="[A-za-z]+" minlength="2" maxlength="2" required>
                         </div>
                         <div>
                             <label for="city">City/Town *</label>
-                            <input type="text" id="city" pattern="[A-za-z]+" required>
+                            <input type="text" class="text-input" id="city" pattern="[A-za-z]+" required>
                         </div>
                     </div>
                     <div class="required-inputs">
                         <div>
                             <label for="address">Steet address *</label>
-                            <input type="text" id="address" required>
+                            <input type="text" class="text-input" id="address" required>
                         </div>
                         <div>
                             <label for="code">Postal code *</label>
-                            <input type="text" id="code" minlength="5" maxlength="5" pattern="[0-9]+"required>
+                            <input type="text" class="text-input" id="code" minlength="5" maxlength="5" pattern="[0-9]+"required>
                         </div>
                     </div>
                     <button id="register-btn">Register</button>
@@ -120,9 +120,13 @@
                         <div class="column">
                             <h1>Please Sign in</h1>
                             <label for="username">Username</label>
-                            <input type="text" id="username" autocomplete="username" required>
-                            <label for="user-pw">Password</label>
-                            <input type="password" id="user-pw" required>
+                            <input type="text" class="text-input" id="username" autocomplete="username" required>
+                            <label for="user-pw" >Password</label>
+                            <input type="password" class="text-input" id="user-pw" required>
+                            <div class="remember">
+                                <input type="checkbox" id="remember-me">
+                                <label for="remember-me">Remember me</label>
+                            </div>
                             <button id="sign-in-button">Sign in</button>
                             <div>
                                 <p>Not a member? <a id="sign-in-redirect" href="login.html">Sign Up</a></p>
